docs/grammar/railroad.ebnf
Line        ::= Prefix Gap? ( Expr | Expression )
Expr        ::= Pipeline ( ( '&&' | '||' ) Pipeline )*
Pipeline    ::= Stage ( '|' Stage )*
Stage       ::= ( Group | IfElse | Invocation ) ( ( '->' | '-->' ) VarRef )?
Group       ::= '(' Expr ')'
IfElse      ::= Prefix? 'ifelse' Argument Group Group?
Invocation  ::= Prefix? Gap? '@'? Name Argument*
              | Prefix? Gap? ( 'check' | 'calc' ) Expression
Argument    ::= ( Text | Quoted | Escape | Placeholder )+
Quoted      ::= '"' ( [^"\{] | Escape | Placeholder )* '"'
Escape      ::= '\' Char
Placeholder ::= '{' ( '!' Invocation | Or ( '??' Fallback )? ) '}'
Expression  ::= Or ( '??' Expression )?
Or          ::= And ( 'or' And )*
And         ::= Not ( 'and' Not )*
Not         ::= 'not' Not | Comparison
Comparison  ::= Sum ( ( '==' | '!=' | '<' | '<=' | '>' | '>=' | 'in' | 'not in' ) Sum )*
Sum         ::= Product ( ( '+' | '-' ) Product )*
Product     ::= Unary ( ( '*' | '/' | '//' | '%' ) Unary )*
Unary       ::= '-' Unary | Postfix
Postfix     ::= Atom ( ':' Accessor | '[' Key ']' )*
Accessor    ::= 'len' | 'keys' | 'values' | 'template' | 'human' | Type
Key         ::= Identifier | Expression
Atom        ::= Number | String | 'true' | 'false' | '(' Expression ')' | Placeholder | Reference
Reference   ::= '$' BotRoot '.' Identifier
              | '_' Digits? ( '.' ( 'code' | 'message' | 'data' ) )?
              | 'arg' '.' ( Digits ( '+' | '+raw' )? | Identifier )
              | 'args'
              | Root ( '.' Identifier )*
              | Variable
BotRoot     ::= 'chatter' | 'channel' | 'publisher' | 'bot' | 'now'
Root        ::= 'event' | 'match' | 'cooldown' | 'denied' | 'run' | 'cmd'
Type        ::= 'str' | 'int' | 'float' | 'bool' | 'range' | 'duration' | 'user' | 'url'
              | 'list' | 'map' | 'choice(' Item ( ',' Item )* ')'
Variable    ::= ( 'chatter' | 'channel' | 'channel.chatter' | 'publisher' | 'publisher.chatter'
              | 'publisher.channel' | 'publisher.channel.chatter' ) '.' VarName
VarRef      ::= Variable ( '[' Key ']' )*
Gap         ::= WS            /* only after a non-ASCII (emoji) prefix */
Name        ::= [a-z0-9] [a-z0-9_-]*
