src/doomtp_bot/lang/parser.py
"""PEG recursive-descent parser mirroring command-language-spec Appendix C rule-for-rule (ADR-0011, ADR-0018).

Each `_rule` method corresponds to the grammar rule of the same name. Conventions:

* Methods that may *fail* (PEG failure, triggers backtracking) return ``None`` and restore ``self.pos``.
* ``%E_CODE`` throws in the grammar are ``raise self._error(...)``; they are never caught by alternatives.
* Positions are 0-based character offsets into the pre-processed input; ``ParseError.column`` is 1-based.
"""

from __future__ import annotations

import dataclasses
import enum
import re
from collections.abc import Callable, Sequence
from dataclasses import dataclass, field

from doomtp_bot.lang.ast import (
    Access,
    And,
    Arg,
    Binary,
    Compare,
    Expr,
    Group,
    IfElse,
    Index,
    Invocation,
    Lit,
    Node,
    Or,
    Part,
    Pipe,
    Placeholder,
    Ref,
    Store,
    Subst,
    Text,
    Unary,
    VarRef,
    walk_expr,
)
from doomtp_bot.lang.errors import ParseError, ParseErrorCode

MAX_EXPR_CHARS = 2000
MAX_PLACEHOLDER_NESTING = 4
MAX_EXPR_DEPTH = 32  # parentheses, brackets, unary operators and placeholders, together
MAX_INT_DIGITS = 18
MAX_NAME_CHARS = 32
MAX_VAR_NAME_CHARS = 32
DEFAULT_PREFIX = (
    "\U0001f3dc"  # \ud83c\udfdc \u2014 the default command sign; channels change it with `prefix`
)
VARIATION_SELECTOR = "\ufe0f"  # emoji presentation selector, optional around an emoji prefix

# The fields the bot supplies, read as `{$root.field}` (ADR-0018 item 5). Read-only, and never a variable.
BOT_FIELDS: dict[str, frozenset[str]] = {
    "chatter": frozenset({"id", "name", "display", "rank", "roles", "is_sub", "is_vip", "is_mod"}),
    "channel": frozenset({"id", "name", "display", "prefix", "live", "title", "game", "viewers", "uptime"}),
    "publisher": frozenset({"id", "name", "display"}),
    "bot": frozenset({"name", "id", "version"}),
    "now": frozenset({"iso", "unix", "date", "time", "weekday"}),
}
# Roots a placeholder may start with, besides variables and `_`/`_N` (spec §2.7).
REGISTERED_ROOTS = frozenset(
    {"$" + root for root in BOT_FIELDS}
    | {"arg", "args", "cmd", "event", "match", "cooldown", "denied", "run"}
)
# Roots whose dots walk a structure the bot defines, as deep as it goes.
PATH_ROOTS = frozenset({"event", "match", "cooldown", "denied", "run", "cmd"})
RESULT_FIELDS = ("code", "message", "data")
# Accessors and casts after `:` (spec §2.7). `choice(a,b)` is handled separately.
ACCESSORS = ("len", "keys", "values", "template")
TYPE_NAMES = ("str", "int", "float", "bool", "range", "duration", "user", "url", "list", "map")
# Commands whose arguments are one expression (ADR-0018 item 6).
EXPR_COMMANDS = frozenset({"check", "calc"})
# Longest first; each alternative requires a following '.' (spec §C.6 VarNs).
VAR_NAMESPACES = (
    "publisher.channel.chatter",
    "publisher.channel",
    "publisher.chatter",
    "publisher",
    "channel.chatter",
    "channel",
    "chatter",
)
# OperatorToken alternatives in grammar order; each must be followed by Boundary.
OPERATOR_TOKENS = ("||", "|", "&&", "-->", "->", "(", ")", ";")
# Inside an expression, longest first.
_COMPARE_OPS = ("==", "!=", "<=", ">=", "<", ">")
_UNKNOWN_OP = re.compile(r"\*\*|>>|<<|&&|\|\||\||&|\^|~|!(?!=)|=")
_NUMBER = re.compile(r"(\d+)(\.\d+)?([eE][+-]?\d+)?")
_KEYWORDS = frozenset({"true", "false", "not", "and", "or", "in"})
# Spec §2.1 step 1: invisible padding stripped from both ends of chat messages.
INVISIBLE_PADDING = frozenset({"\U000e0000", "\u200b", "\u200c", "\u200d", "\u2060", "\ufeff"})
# str.isspace() also accepts U+001C..U+001F, which lack the Unicode White_Space property.
_NOT_WHITE_SPACE = frozenset("\x1c\x1d\x1e\x1f")


class Context(enum.StrEnum):
    LINE = "line"
    BODY = "body"
    TRIGGER = "trigger"
    LISTENER = "listener"
    CALLBACK = "callback"


class RawTail(enum.Enum):
    """Sentinels for `raw_tail_from` (spec §C.4). An int return means 'raw tail starts at argument N'."""

    MORE = "more"
    NONE = "none"


RawTailFn = Callable[[str, Sequence[str]], "int | RawTail"]


def _no_raw_tail(name: str, lead_args: Sequence[str]) -> int | RawTail:
    return RawTail.NONE


def _no_reserved_vars(namespace: str, name: str) -> bool:
    return False


@dataclass(frozen=True)
class ParserParams:
    """Runtime parameters for one parse call (spec §C.6)."""

    prefix: str = DEFAULT_PREFIX
    raw_tail_from: RawTailFn = _no_raw_tail
    registered_roots: frozenset[str] = field(default_factory=lambda: REGISTERED_ROOTS)
    reserved_var_names: Callable[[str, str], bool] = _no_reserved_vars
    max_placeholder_nesting: int = MAX_PLACEHOLDER_NESTING


def after_prefix(text: str, at: int, prefix: str) -> int | None:
    """Index just past `prefix` at `at` in `text` (plus its optional gap), or None if it isn't there.

    This is the one rule for matching the command sign (spec §2.1 PREFIX, PrefixGap): LineStart and
    CmdPrefix use it, and so does everything else that takes a sign off typed text.

    U+FE0F is skipped on both sides, so a channel prefix saved as `\U0001f3dc` still matches the
    emoji-presentation `\U0001f3dc\ufe0f` that many chat clients send, and the other way round.
    """
    i, j, n = at, 0, len(text)
    while j < len(prefix):
        if prefix[j] == VARIATION_SELECTOR:
            j += 1
        elif i < n and text[i] == VARIATION_SELECTOR:
            i += 1
        elif i < n and text[i] == prefix[j]:
            i, j = i + 1, j + 1
        else:
            return None
    while i < n and text[i] == VARIATION_SELECTOR:
        i += 1
    if allows_gap(prefix):
        while i < n and is_ws(text[i]):
            i += 1
    return i


def strip_prefix(text: str, prefix: str) -> str:
    """`text` without the command sign in front, matched as the parser matches it; unchanged without one."""
    end = after_prefix(text, 0, prefix)
    return text if end is None else text[end:]


class NotACommand(Exception):
    """Line context only: LineStart did not match; the message is ordinary chat (spec §2.1 step 4)."""


def is_ws(ch: str) -> bool:
    return ch.isspace() and ch not in _NOT_WHITE_SPACE


def _is_name_start(ch: str) -> bool:
    return ch.isascii() and ch.isalnum()


def allows_gap(prefix: str) -> bool:
    """Emoji prefixes may be followed by a space: `\U0001f3dc ping` reads naturally, `! ping` does not
    (it would turn ordinary chat like "! that was close" into a command)."""
    stripped = prefix.rstrip(VARIATION_SELECTOR)
    return bool(stripped) and not stripped[-1].isascii()


def _is_name_char(ch: str) -> bool:
    return _is_name_start(ch) or ch in "_-"


def _is_ident_start(ch: str) -> bool:
    return ch.isascii() and (ch.isalpha() or ch == "_")


def _is_ident_char(ch: str) -> bool:
    return ch.isascii() and (ch.isalnum() or ch == "_")


def _is_digit(ch: str) -> bool:
    return ch.isascii() and ch.isdigit()


def preprocess_line(text: str, reply_parent_login: str | Sequence[str] | None = None) -> str:
    """Spec §2.1 steps 1–3: strip invisible padding, the reply mention, and surrounding whitespace.

    `reply_parent_login` names the replied-to user: a login, or several names (login and display name).
    Twitch prefixes replies with `@DisplayName`, which can differ from the login beyond letter case.
    """
    start, end = 0, len(text)
    while start < end and (text[start] in INVISIBLE_PADDING or is_ws(text[start])):
        start += 1
    while end > start and (text[end - 1] in INVISIBLE_PADDING or is_ws(text[end - 1])):
        end -= 1
    text = text[start:end]

    names = [reply_parent_login] if isinstance(reply_parent_login, str) else list(reply_parent_login or ())
    for name in names:
        if not name:
            continue
        mention = "@" + name
        if (
            len(text) > len(mention)
            and text[: len(mention)].casefold() == mention.casefold()
            and is_ws(text[len(mention)])
        ):
            text = text[len(mention) :]
            break

    start, end = 0, len(text)
    while start < end and is_ws(text[start]):
        start += 1
    while end > start and is_ws(text[end - 1]):
        end -= 1
    return text[start:end]


def looks_like_command(text: str, prefix: str, reply_parent_login: str | Sequence[str] | None = None) -> bool:
    """Cheap Line-context check (spec §2.1 step 4): would this chat message be parsed as a command?"""
    return _Parser(
        preprocess_line(text, reply_parent_login), ParserParams(prefix=prefix), Context.LINE
    ).line_start()


def parse(text: str, context: Context, params: ParserParams) -> Node:
    """Parse `text` into an AST. Raises ParseError, or NotACommand for Line context.

    For Line context, `text` must already be pre-processed with `preprocess_line`.
    """
    if len(text) > MAX_EXPR_CHARS:
        raise ParseError(ParseErrorCode.TOO_LONG, MAX_EXPR_CHARS)
    parser = _Parser(text, params, context)
    if context is Context.LINE:
        if not parser.line_start():
            raise NotACommand
        if parser.expr_line is not None:  # `🏜1 + 3` runs as `calc` (ADR-0018 item 6)
            return Invocation(1, "calc", False, (), None, (0, len(text)), expr=parser.expr_line)
    else:
        parser.opt_ws()
    return _number_invocations(parser.line_body())


def parse_var_ref(text: str, params: ParserParams | None = None) -> VarRef:
    """A variable with an optional path, `channel.stats[kills]`, as `!var` takes it. `{!…}` isn't allowed."""
    parser = _Parser(text.strip(), params or ParserParams(), Context.BODY)
    ref = parser.var_ref()
    if not parser.eof():
        raise parser._error(ParseErrorCode.BAD_VARREF, 0)
    for key in ref.path:
        if any(isinstance(e, Subst) for e in walk_expr(key)):
            raise ParseError(ParseErrorCode.BAD_VARREF, 0, hint="a variable's path can't run a command")
    return ref


def parse_template(text: str, params: ParserParams | None = None) -> tuple[Part, ...]:
    """A stored template for `:template` (ADR-0019): text with placeholders, one level deep.

    `\\` escapes as in a quoted word, and a `}` outside a placeholder is text. A template can't run a
    command (`{!…}`) or render another template, so what it shows is always a read.
    """
    if len(text) > MAX_EXPR_CHARS:
        raise ParseError(ParseErrorCode.TOO_LONG, MAX_EXPR_CHARS)
    parser = _Parser(text, params or ParserParams(), Context.BODY)
    parts: list[Part] = []
    while not parser.eof():
        ch = parser.s[parser.pos]
        if ch == "\\":
            parts.append(parser.escape())
        elif ch == "{":
            at = parser.pos
            ph = parser.placeholder()
            for expr in walk_expr(ph):
                if isinstance(expr, Subst):
                    raise ParseError(ParseErrorCode.BAD_PLACEHOLDER, at, hint="a template can't run {!…}")
                if isinstance(expr, Access) and expr.name == "template":
                    raise ParseError(
                        ParseErrorCode.BAD_PLACEHOLDER, at, hint="a template can't use :template"
                    )
            parts.append(ph)
        else:
            start = parser.pos
            while not parser.eof() and parser.s[parser.pos] not in "\\{":
                parser.pos += 1
            parts.append(Text(parser.s[start : parser.pos]))
    return _merge_text(parts)


class _Parser:
    def __init__(self, text: str, params: ParserParams, context: Context = Context.BODY) -> None:
        self.s = text
        self.n = len(text)
        self.pos = 0
        self.params = params
        self.line = context is Context.LINE
        self.depth = 0  # placeholders
        self.expr_depth = 0
        self.in_subst = 0
        self.substs = 0  # `{!…}` invocations get -1, -2, … as they are met
        self.expr_line: Expr | None = None

    # ── primitives ──────────────────────────────────────────────────────────
    def _error(
        self, code: ParseErrorCode, offset: int | None = None, hint: str | None = None, **fmt: str
    ) -> ParseError:
        return ParseError(code, self.pos if offset is None else offset, hint, **fmt)

    def eof(self, at: int | None = None) -> bool:
        return (self.pos if at is None else at) >= self.n

    def boundary(self, at: int) -> bool:
        """Boundary <- &(WSChar / EOF)"""
        return at >= self.n or is_ws(self.s[at])

    def ws(self) -> bool:
        """WS <- WSChar+"""
        start = self.pos
        while self.pos < self.n and is_ws(self.s[self.pos]):
            self.pos += 1
        return self.pos > start

    def opt_ws(self) -> None:
        """_ <- WSChar*"""
        self.ws()

    def operator_at(self, at: int) -> str | None:
        """OperatorToken (lookahead): the operator starting at `at`, if any."""
        for op in OPERATOR_TOKENS:
            if self.s.startswith(op, at) and self.boundary(at + len(op)):
                return op
        return None

    def literal_op(self, op: str) -> bool:
        """Match `op Boundary` at the current position and consume `op`."""
        if self.s.startswith(op, self.pos) and self.boundary(self.pos + len(op)):
            self.pos += len(op)
            return True
        return False

    def subst_end(self, at: int) -> bool:
        """Inside `{!…}`, a `}` ends the command."""
        return self.in_subst > 0 and self.s.startswith("}", at)

    # ── C.2 entry points ────────────────────────────────────────────────────
    def line_start(self) -> bool:
        """LineStart <- &( (Open WS)* PREFIX PrefixGap? '@'? NameStart ) / &( PREFIX PrefixGap? ExprLine )"""
        at = 0
        while self.s.startswith("(", at) and at + 1 < self.n and is_ws(self.s[at + 1]):
            at += 1
            while at < self.n and is_ws(self.s[at]):
                at += 1
        end = after_prefix(self.s, at, self.params.prefix)
        if end is None:
            return False
        if at == 0 and end < self.n and (_is_digit(self.s[end]) or self.s[end] in "{(-"):
            self.expr_line = self._expression_line(end)
            if self.expr_line is not None:
                return True
        if self.s.startswith("@", end):
            end += 1
        if end >= self.n or not _is_name_start(self.s[end]):
            return False
        chunk = end
        while chunk < self.n and not is_ws(self.s[chunk]):
            chunk += 1
        return not self.s[end:chunk].isdigit()  # `🏜100` is chat, not a command named 100

    def _expression_line(self, at: int) -> Expr | None:
        """ExprLine <- Expr EOF, with at least one operator: a bare number or placeholder is not one."""
        save = self.pos
        self.pos = at
        try:
            expr = self.expression()
            self.opt_ws()
            if expr is None or not self.eof():
                return None
        except ParseError:
            return None
        finally:
            self.pos = save
        return expr if isinstance(expr, Unary | Binary | Compare) else None

    def line_body(self) -> Node:
        """LineBody <- RawTailInvocation _ EOF / Expr End"""
        save = self.pos
        raw = self.raw_tail_invocation()
        if raw is not None:
            self.opt_ws()
            if self.eof():
                return raw
        self.pos = save
        node = self.expr()
        self.end()
        return node

    def end(self) -> None:
        """End <- _ EOF / WS Reserved %RESERVED / WS Close %UNBALANCED / WS OperatorToken %UNEXPECTED"""
        self.opt_ws()
        if self.eof():
            return
        op = self.operator_at(self.pos)
        if op == ")":
            raise self._error(ParseErrorCode.UNBALANCED_GROUP)
        raise self._operator_error(op)

    def _operator_error(self, op: str | None) -> ParseError:
        """Reserved `;` → E_RESERVED_OPERATOR, any other operator → E_UNEXPECTED_OPERATOR."""
        if op == ";":
            return self._error(ParseErrorCode.RESERVED_OPERATOR)
        if op is not None:
            return self._error(ParseErrorCode.UNEXPECTED_OPERATOR, op=op)
        return self._error(ParseErrorCode.INTERNAL)

    def require_operand(self, op: str) -> None:
        """`_ EOF %E_MISSING_OPERAND`: skip spaces, and fail if the line ends where an operand must follow."""
        self.opt_ws()
        if self.eof():
            raise self._error(ParseErrorCode.MISSING_OPERAND, op=op)

    # ── C.3 command expressions ─────────────────────────────────────────────
    def expr(self) -> Node:
        return self.logical()

    def logical(self) -> Node:
        """Logical <- Pipeline (WS LogicOp LogicOperand)*"""
        left = self.pipeline()
        while True:
            save = self.pos
            if self.ws():
                op = "&&" if self.literal_op("&&") else "||" if self.literal_op("||") else None
                if op is not None:
                    right = self.logic_operand(op)
                    left = And(left, right) if op == "&&" else Or(left, right)
                    continue
            self.pos = save
            return left

    def logic_operand(self, op: str) -> Node:
        """LogicOperand <- WS Pipeline / _ EOF %E_MISSING_OPERAND"""
        self.require_operand(op)
        return self.pipeline()

    def pipeline(self) -> Node:
        """Pipeline <- Stage (WS PipeOp Operand)*"""
        left = self.stage()
        while True:
            save = self.pos
            if self.ws() and self.literal_op("|"):
                left = Pipe(left, self.operand("|"))
                continue
            self.pos = save
            return left

    def operand(self, op: str) -> Node:
        """Operand <- WS Stage / _ EOF %E_MISSING_OPERAND"""
        self.require_operand(op)
        return self.stage()

    def stage(self) -> Node:
        """Stage <- Primary StoreSuffix?    StoreSuffix <- WS StoreOp StoreTarget    StoreOp <- '-->' / '->'"""
        node = self.primary()
        save = self.pos
        if self.ws():
            op = "-->" if self.literal_op("-->") else "->" if self.literal_op("->") else None
            if op is not None:
                return Store(node, self.store_target(op), append=op == "-->")
        self.pos = save
        return node

    def store_target(self, op: str) -> VarRef:
        """StoreTarget <- WS VarRef Boundary / _ EOF %E_MISSING_OPERAND / WS OperatorToken %E_UNEXPECTED_OPERATOR"""
        self.require_operand(op)
        found = self.operator_at(self.pos)
        if found is not None:
            raise self._error(ParseErrorCode.UNEXPECTED_OPERATOR, op=found)
        start = self.pos
        target = self.var_ref()
        if not self.boundary(self.pos):
            raise self._error(ParseErrorCode.BAD_VARREF, start)
        return target

    def primary(self) -> Node:
        """Primary <- Group / &Reserved %RESERVED / &OperatorToken %UNEXPECTED / IfElse / Invocation"""
        op = self.operator_at(self.pos)
        if op == "(":
            return self.group()
        if op is not None:
            raise self._operator_error(op)
        ifelse = self.if_else()
        if ifelse is not None:
            return ifelse
        return self.invocation()

    def group(self) -> Group:
        """Group <- Open GroupInner GroupEnd"""
        self.pos += 1  # Open (boundary already checked by primary)
        # GroupInner <- WS Expr / _ EOF %E_MISSING_OPERAND
        self.require_operand("(")
        inner = self.expr()
        # GroupEnd <- WS Close / _ EOF %UNBALANCED / WS Reserved %RESERVED / WS OperatorToken %UNEXPECTED
        self.opt_ws()
        if self.eof():
            raise self._error(ParseErrorCode.UNBALANCED_GROUP)
        op = self.operator_at(self.pos)
        if op == ")":
            self.pos += 1
            return Group(inner)
        raise self._operator_error(op)

    def if_else(self) -> IfElse | None:
        """IfElse <- CmdPrefix? 'ifelse' WS Word WS Group (WS Group)?"""
        start = self.pos
        self.cmd_prefix()
        if not (self.s.startswith("ifelse", self.pos) and self.boundary(self.pos + len("ifelse"))):
            self.pos = start
            return None
        self.pos += len("ifelse")
        self.require_operand("ifelse")
        if self.operator_at(self.pos) is not None:
            raise self._error(ParseErrorCode.EXPR_SYNTAX, hint="ifelse needs a condition, then ( a command )")
        cond = self.word()
        self.require_operand("ifelse")
        if self.operator_at(self.pos) != "(":
            raise self._error(
                ParseErrorCode.EXPR_SYNTAX, hint="ifelse needs ( a command ) after its condition"
            )
        then = self.group()
        save = self.pos
        if self.ws() and self.operator_at(self.pos) == "(":
            return IfElse(cond, then, self.group())
        self.pos = save
        return IfElse(cond, then, None)

    # ── C.4 invocations ─────────────────────────────────────────────────────
    def cmd_prefix(self) -> None:
        """CmdPrefix? <- PREFIX PrefixGap? &('@'? NameStart)"""
        end = after_prefix(self.s, self.pos, self.params.prefix)
        if end is None:
            return
        at = end + 1 if self.s.startswith("@", end) else end
        if at < self.n and _is_name_start(self.s[at]):
            self.pos = end

    def name(self) -> str:
        """Name <- NameStart NameChar* &(WSChar / EOF) !Digits / &'{' %E_DYNAMIC_NAME / %E_BAD_NAME"""
        start = self.pos
        if start < self.n and _is_name_start(self.s[start]):
            end = start + 1
            while end < self.n and _is_name_char(self.s[end]):
                end += 1
            ok_end = self.boundary(end) or self.subst_end(end)
            if ok_end and end - start <= MAX_NAME_CHARS and not self.s[start:end].isdigit():
                self.pos = end
                return self.s[start:end].lower()
            raise self._error(ParseErrorCode.BAD_NAME, start)
        if self.s.startswith("{", start):
            raise self._error(ParseErrorCode.DYNAMIC_NAME, start)
        raise self._error(ParseErrorCode.BAD_NAME, start)

    def arg(self) -> Arg | None:
        """Arg <- WS !OperatorToken Word"""
        save = self.pos
        if (
            self.ws()
            and not self.eof()
            and self.operator_at(self.pos) is None
            and not self.subst_end(self.pos)
        ):
            start = self.pos
            word = self.word()
            if self.line and self.s[start : self.pos] in (">", ">>"):
                self._old_store(self.s[start : self.pos], start)
            return word
        self.pos = save
        return None

    def _old_store(self, op: str, at: int) -> None:
        """Typed lines only, for one release: `> channel.x` was a store before syntax 2.0 (ADR-0018)."""
        after = self.pos
        while after < self.n and is_ws(self.s[after]):
            after += 1
        if any(self.s.startswith(ns + ".", after) for ns in VAR_NAMESPACES):
            new = "->" if op == ">" else "-->"
            raise self._error(
                ParseErrorCode.UNEXPECTED_OPERATOR, at, hint=f"{op} is plain text now: store with {new}"
            )

    def invocation(self) -> Invocation:
        """Invocation <- CmdPrefix? '@'? Name (ExprArgs / Arg* RawCheck)"""
        start = self.pos
        self.cmd_prefix()
        personal = self.s.startswith("@", self.pos)
        if personal:
            self.pos += 1
        name = self.name()
        if not personal and name in EXPR_COMMANDS:
            return Invocation(0, name, personal, (), None, (start, self.pos), expr=self.expr_args())
        args: list[Arg] = []
        while (a := self.arg()) is not None:
            args.append(a)
        # RawCheck: a raw-tail command inside a larger expression
        if isinstance(self.params.raw_tail_from(name, [_plain(a) for a in args]), int):
            raise self._error(ParseErrorCode.RAW_TAIL_POSITION, start, name=name)
        return Invocation(0, name, personal, tuple(args), None, (start, self.pos))

    def expr_args(self) -> Expr | None:
        """ExprArgs <- WS Expression &(_ (EOF / OperatorToken / '}' in {!…})) / (nothing: a usage error later)"""
        save = self.pos
        if not self.ws() or self.eof() or self.operator_at(self.pos) is not None or self.subst_end(self.pos):
            self.pos = save
            return None
        start = self.pos
        expr = self.expression()
        if expr is None:
            raise self._error(ParseErrorCode.EXPR_SYNTAX, start)
        after = self.pos
        self.opt_ws()
        if self.eof() or self.operator_at(self.pos) is not None or self.subst_end(self.pos):
            self.pos = after
            return expr
        raise self._stray()

    def raw_tail_invocation(self) -> Invocation | None:
        """RawTailInvocation <- CmdPrefix? '@'? &NameStart Name &{raw != NONE} RawLeadArg* &{is_int} RawTail?"""
        start = self.pos
        self.cmd_prefix()
        personal = self.s.startswith("@", self.pos)
        if personal:
            self.pos += 1
        if self.eof() or not _is_name_start(self.s[self.pos]):
            self.pos = start
            return None
        name = self.name()
        raw_tail_from = self.params.raw_tail_from
        if raw_tail_from(name, []) is RawTail.NONE:
            self.pos = start
            return None

        args: list[Arg] = []
        plain: list[str] = []
        while self._needs_more_lead(name, plain):
            a = self.arg()
            if a is None:
                break
            args.append(a)
            plain.append(_plain(a))
        if not isinstance(raw_tail_from(name, plain), int):
            self.pos = start
            return None

        raw: str | None = None
        save = self.pos
        if self.ws() and not self.eof():
            raw = _strip_outer_quotes(self.s[self.pos :])
            self.pos = self.n
        else:
            self.pos = save
        return Invocation(0, name, personal, tuple(args), raw, (start, self.pos))

    def _needs_more_lead(self, name: str, lead: Sequence[str]) -> bool:
        r = self.params.raw_tail_from(name, lead)
        return r is RawTail.MORE or (isinstance(r, int) and len(lead) + 1 < r)

    # ── C.5 words, quotes, escapes, placeholders ────────────────────────────
    def word(self) -> Arg:
        """Word <- Segment+    Segment <- Quoted / Escape / Placeholder / Bare"""
        parts: list[Part] = []
        while self.pos < self.n and not is_ws(self.s[self.pos]) and not self.subst_end(self.pos):
            ch = self.s[self.pos]
            if ch == '"':
                parts.extend(self.quoted())
            elif ch == "\\":
                parts.append(self.escape())
            elif ch == "{":
                parts.append(self.placeholder())
            else:
                start = self.pos
                while (
                    self.pos < self.n
                    and not is_ws(self.s[self.pos])
                    and self.s[self.pos] not in '"\\{'
                    and not self.subst_end(self.pos)
                ):
                    self.pos += 1
                parts.append(Text(self.s[start : self.pos]))
        return _merge_text(parts)

    def quoted(self) -> list[Part]:
        """Quoted <- '"' QChar* ('"' / %E_UNTERMINATED_QUOTE)"""
        self.pos += 1
        parts: list[Part] = []
        while True:
            if self.eof():
                raise self._error(ParseErrorCode.UNTERMINATED_QUOTE)
            ch = self.s[self.pos]
            if ch == '"':
                self.pos += 1
                return parts
            if ch == "\\":
                parts.append(self.escape())
            elif ch == "{":
                parts.append(self.placeholder())
            else:
                start = self.pos
                while self.pos < self.n and self.s[self.pos] not in '"\\{':
                    self.pos += 1
                parts.append(Text(self.s[start : self.pos]))

    def escape(self) -> Text:
        """Escape <- '\\' . / '\\' EOF"""
        self.pos += 1
        if self.eof():
            return Text("\\")
        ch = self.s[self.pos]
        self.pos += 1
        return Text(ch)

    def placeholder(self) -> Placeholder:
        """Placeholder <- '{' &{depth < MAX} (Subst / PhInner '}' / %E_BAD_PLACEHOLDER)"""
        start = self.pos
        if self.depth >= self.params.max_placeholder_nesting:
            raise self._error(ParseErrorCode.BAD_PLACEHOLDER, start)
        self.pos += 1
        self.depth += 1
        self._deeper(start)
        try:
            if self.s.startswith("!", self.pos):
                return Placeholder(self.subst(start), None, (start, self.pos))
            if self.line:
                self._old_result_ref(start)
            self.opt_ws()
            expr = self.or_expr()
            if expr is None:
                raise self._error(ParseErrorCode.BAD_PLACEHOLDER, start + 1)
            fallback = self._fallback()
            self.opt_ws()
            if not self.s.startswith("}", self.pos):
                if self.eof():
                    raise self._error(ParseErrorCode.BAD_PLACEHOLDER, start + 1)
                raise self._stray()
            self.pos += 1
            return Placeholder(expr, fallback, (start, self.pos))
        finally:
            self.depth -= 1
            self.expr_depth -= 1

    def subst(self, start: int) -> Subst:
        """Subst <- '{!' Invocation _ '}'    (one command; its data, or else its message, is the value)"""
        self.pos += 1
        self.in_subst += 1
        try:
            inv = self.invocation()
        finally:
            self.in_subst -= 1
        self.opt_ws()
        if not self.s.startswith("}", self.pos):
            raise self._error(
                ParseErrorCode.BAD_PLACEHOLDER, start + 1, hint="{!…} runs one command and ends with }"
            )
        self.pos += 1
        self.substs += 1
        return Subst(dataclasses.replace(inv, index=-self.substs))

    def _old_result_ref(self, start: int) -> None:
        """Typed lines only, for one release: `{1}` and `{1.x}` were result refs before syntax 2.0."""
        m = re.compile(r"\s*([1-9]\d*)((?:\.\w+)*)\s*(\?\?|\})").match(self.s, self.pos)
        if m is None:
            return
        n, path = m.group(1), [p for p in m.group(2).split(".") if p]
        new = f"_{n}" + (
            "".join(f".{p}" for p in path)
            if all(p in RESULT_FIELDS for p in path)
            else "".join(f"[{p}]" for p in path)
        )
        raise self._error(ParseErrorCode.BAD_PLACEHOLDER, start, hint=f"a result is {{{new}}} now")

    def _fallback(self) -> tuple[Part, ...] | None:
        """Fallback <- _ '??' _ FbPart*    FbPart <- Escape / Placeholder / (!('{' / '}' / '\\') .)"""
        save = self.pos
        self.opt_ws()
        if not self.s.startswith("??", self.pos):
            self.pos = save
            return None
        self.pos += 2
        self.opt_ws()
        parts: list[Part] = []
        while self.pos < self.n and self.s[self.pos] != "}":
            ch = self.s[self.pos]
            if ch == "\\":
                parts.append(self.escape())
            elif ch == "{":
                parts.append(self.placeholder())
            else:
                start = self.pos
                while self.pos < self.n and self.s[self.pos] not in "{}\\":
                    self.pos += 1
                parts.append(Text(self.s[start : self.pos]))
        merged = list(_merge_text(parts))
        if merged and isinstance(merged[-1], Text):  # action: trim trailing WS
            trimmed = merged[-1].value.rstrip()
            if trimmed:
                merged[-1] = Text(trimmed)
            else:
                merged.pop()
        return tuple(merged)

    # ── C.7 expressions (ADR-0018) ──────────────────────────────────────────
    # Each rule returns None when nothing matches where an operand must start, and raises E_EXPR_SYNTAX
    # when an operator has no operand after it. Spaces between tokens are optional.
    def _deeper(self, at: int) -> None:
        self.expr_depth += 1
        if self.expr_depth > MAX_EXPR_DEPTH:
            raise self._error(ParseErrorCode.EXPR_TOO_DEEP, at)

    def _need(self, expr: Expr | None, at: int) -> Expr:
        if expr is None:
            raise self._error(ParseErrorCode.EXPR_SYNTAX, at)
        return expr

    def _stray(self) -> ParseError:
        """Something follows a complete expression: an operator we don't have, or anything else."""
        m = _UNKNOWN_OP.match(self.s, self.pos)
        if m is not None:
            return self._error(ParseErrorCode.UNKNOWN_OP, op=m.group())
        return self._error(ParseErrorCode.EXPR_SYNTAX)

    def _keyword(self, word: str) -> bool:
        end = self.pos + len(word)
        if self.s.startswith(word, self.pos) and not (end < self.n and _is_ident_char(self.s[end])):
            self.pos = end
            return True
        return False

    def _peek(self, *ops: str) -> str | None:
        """After optional spaces, the first of `ops` found (consumed with the spaces), else None."""
        save = self.pos
        self.opt_ws()
        for op in ops:
            if op.isalpha():
                if self._keyword(op):
                    return op
            elif self.s.startswith(op, self.pos):
                self.pos += len(op)
                return op
        self.pos = save
        return None

    def expression(self) -> Expr | None:
        """Expression <- OrExpr (_ '??' _ Expression)?"""
        left = self.or_expr()
        if left is None:
            return None
        at = self.pos
        if self._peek("??"):
            self.opt_ws()
            return Binary("??", left, self._need(self.expression(), at))
        return left

    def or_expr(self) -> Expr | None:
        """OrExpr <- AndExpr (_ 'or' _ AndExpr)*"""
        left = self.and_expr()
        while left is not None and (at := self.pos) is not None and self._peek("or"):
            self.opt_ws()
            left = Binary("or", left, self._need(self.and_expr(), at))
        return left
